--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,12 +36,17 @@
         </li>
         <li class="nav-item">
           {{#if theUser}}
-            <a class="nav-link"href="/movies/create">Add Movie</a> <br>
+            <a class="nav-link"href="/items/create">Add Item</a> <br>
+          {{/if}}
+        </li>
+        <li class="nav-item">
+          {{#if theUser}}
+          <a class="nav-link" href="/items/items">See Items</a> <br>
           {{/if}}
         </li>
         <li class="nav-item">
             {{#if theUser}}
-              <a class="nav-link"href='/celebrities/create'>Create Your Celebrity</a> 
+              <a class="nav-link"href='/outfits/create'>See Outfits</a> 
             {{/if}}
         </li>
         <li class="nav-item">
