--- a/views/outfits/outfit-details.hbs
+++ b/views/outfits/outfit-details.hbs
@@ -1,11 +1,11 @@
-<h2>Movie Details</h2>
+<h2>Outfit Details</h2>
 
 <div>
    
-        <h3>title: {{movie.title}}</h3>
-        <h3>genre: {{movie.genre}}</h3>
-        <h3>plot: {{movie.plot}}</h3>
-        <h5>Number of likes: {{likes}}</h5>
+        <h3>Top: {{movie.title}}</h3>
+        <h3>Bottom: {{movie.genre}}</h3>
+        <h3>Shoe: {{movie.plot}}</h3>
+      
         <hr>
         <h3>Cast:</h3>
         {{#each movie.cast}}
