finished items routes & added photos

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -13,7 +13,7 @@
 </h4>
 <br><br>
 <div>
-    <h4>Your Movie Favorites:</h4>
+    <h4>Favorite Outfits</h4>
     <br>
     <hr>
     {{#each theUser.likes}}
