--- a/views/items/items.hbs
+++ b/views/items/items.hbs
@@ -7,6 +7,7 @@
         <img width="250px" src="{{image}}">
         <h3>Item Name: {{this.itemName}}</h3>
         <h3>Item Type: {{this.type}}</h3>
+        <h3>Size: {{this.size}}</h3>
         <h3>Color: {{this.color}}</h3>
         <h3>Brand: {{this.brand}}</h3>
         <h3>Color: {{this.color}}</h3>
@@ -14,7 +15,10 @@
         <h3>Category: {{this.category}}</h3>
 
         <br>
-        <button><a class="edit" href="/items/{{id}}/edit">Edit</a></button>
+        
+        <button>
+            <a class="edit" href="/items/{{id}}/edit">Edit</a>
+        </button>
         
         <br>
         <br>
