created a create outfits page and dispayed items & a see outfits page

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,7 +46,12 @@
         </li>
         <li class="nav-item">
             {{#if theUser}}
-              <a class="nav-link"href='/outfits/create'>See Outfits</a> 
+              <a class="nav-link"href='/outfits/create'>Create Outfits</a> 
+            {{/if}}
+        </li>
+        <li class="nav-item">
+            {{#if theUser}}
+              <a class="nav-link"href='/outfits/outfits'>See Outfits</a> 
             {{/if}}
         </li>
         <li class="nav-item">
