item route and styling started

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,24 @@
-<h1>Your Closet</h1>
-<p>Welcome to Your Bitch'n Closet</p>
+<header> 
 
+{{!-- <img src="/images/Hello Closet!-white.png" alt="logo"> --}}
+<h1>Hello Closet!</h1>
+<h1>Welcome to Your Bitch'n Closet</h1>
+
+<div class= "buttons-section">
+<button> Learn More </button> <button><a class="nav-link" href="/signup">Sign Up</a></button>
+</div>
+
+</header>
+
+<hr>
+
+
+</section>
+
+<section class="outfits">
+
+</section>
+
+<footer class="footer">
+
+</footer>
