--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,9 +11,11 @@
   </head>
 
   <body>
-     <nav class="navbar navbar-expand-lg bg-dark">
+
+
+     <nav class="navbar navbar-custom navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Your Closet</a>
+    <a class="navbar-brand" href="/"><img src="/images/Hello Closet!.png" alt="logo" width="125px"></a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -65,7 +67,6 @@
     </div>
   </div>
 </nav>
-
 
  
 
