--- a/views/outfits/outfit-details.hbs
+++ b/views/outfits/outfit-details.hbs
@@ -1,30 +1,22 @@
-<h2>Outfit Details</h2>
+<h2>Create an Outfit</h2>
 
 <div>
+    {{#if theUser}}
     {{#each items}}
         <img width="250px" src="{{image}}">
         <h3>Name: {{this.itemName}}</h3>
         <h3>Category: {{this.category}}</h3>
+        <form action="/like/{{items.id}}" method="post">
+            <button>Add Item to Outfit</button>
+        </form>
+        <form action="{{id}}" method="post">
+            <button>Delete</button>
+        </form>
+        <br>
+
     {{/each}}
+    {{/if}}
+
 
 </div>
 
-{{!-- {{#if theUser}}
-<form action="/like/{{movie.id}}" method="post">
-    <button>💔</button>
-</form>
-{{/if}}
-
-{{#if theUser}}
-<form action="{{id}}" method="post">
-    <button>Delete This Movie</button>
-</form>
-<br>
-<form action="{{movie.id}}/edit" method="get">
-    <button>Edit</button>
-</form>
-<br>
-<form action="/like/{{movie.id}}" method="post">
-    <button>💔</button>
-</form>
-{{/if}} --}}
