--- a/views/outfits/outfit-details.hbs
+++ b/views/outfits/outfit-details.hbs
@@ -6,7 +6,7 @@
         <img width="250px" src="{{image}}">
         <h3>Name: {{this.itemName}}</h3>
         <h3>Category: {{this.category}}</h3>
-        <form action="/like/{{items.id}}" method="post">
+        <form action="/{{id}}/updated/{{outfit.id}}" method="post">
             <button>Add Item to Outfit</button>
         </form>
         <form action="{{id}}" method="post">
