--- a/views/outfits/outfits.hbs
+++ b/views/outfits/outfits.hbs
@@ -1,16 +1,3 @@
 <h2>Your Outfits</h2>
 
-{{!-- <div>
-    {{#each items}}
-        <img width="250px" src="{{image}}">
-        <h3>Name: {{this.itemName}}</h3>
-        <h3>Category: {{this.category}}</h3>
-    {{/each}}
-
-</div>
-
-{{#if theUser}}
-<form action="/like/{{movie.id}}" method="post">
-    <button>💔</button>
-</form>
-{{/if}} --}}
+{{this}}
