--- a/views/outfits/edit-outfit.hbs
+++ b/views/outfits/edit-outfit.hbs
@@ -1,3 +1,8 @@
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/items.css" />
+</head>
+
 <h2>Update Your Outfit</h2>
 
 
