--- a/views/auth/changepassword.hbs
+++ b/views/auth/changepassword.hbs
@@ -1,4 +1,9 @@
-<h3>Change your password</h3>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/authpages.css" />
+</head>
+
+<h2>Change your password</h2>
 <h4>Username: {{theUser.username}}</h4>
 
 <form action="/new-password" method="post">
