--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,9 @@
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/authpages.css" />
+</head>
+
+
 <h2>Login</h2>
 
 <form action="/login" method="post">
