--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,6 +1,10 @@
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/authpages.css" />
+</head>
 
 
-<h1>User Profile</h1>
+<h2>User Profile</h2>
 
 <h4 class = 'username'>
     Username: 
