--- a/views/items/items.hbs
+++ b/views/items/items.hbs
@@ -1,18 +1,33 @@
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/items.css" />
+</head>
 
-<h1>Your Closet</h1>
+
+{{!-- <div class="container">
+    <div>
+    <img src="/images/add-item.png" alt="closet" style="width:30%;">
+    <h4>Add Item</h4>
+    </div>
+    <div>
+    <img src="/images/outfits.png" alt="closet" style="width:30%;">
+    <h4>Create Outfit</h4>
+    </div>
+</div> --}}
+
+<h2><center>Your Closet</center></h2>
 
 <div class="container text-center">
     <div class="row">
     {{#each items}}
         <div class="col">
             <br>
-            <img width="250px" src="{{image}}">
+            <img src="{{image}}">
             <h3>Item Name: {{this.itemName}}</h3>
             <h3>Item Type: {{this.type}}</h3>
             <h3>Size: {{this.size}}</h3>
             <h3>Color: {{this.color}}</h3>
             <h3>Brand: {{this.brand}}</h3>
-            <h3>Color: {{this.color}}</h3>
             <h3>Description: {{this.description}}</h3>
             <h3>Category: {{this.category}}</h3>
 
@@ -21,12 +36,13 @@
             <button>
                 <a class="edit" href="/items/{{id}}/edit">Edit</a>
             </button>
-            
+
+          
             <br>
             <br>
             
             <form action="/items/{{this.id}}/delete" method="post">
-                <button class="delete" type="submit">Delete</button>
+                <button class="delete-btn" type="submit">Delete</button>
             </form>
             
             <br>
@@ -37,4 +53,7 @@
     </div>
 
 </div>
+<di>
+
+</di>
 
