--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,11 +19,8 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
           {{#if theUser}}
-            <a class="nav-link" href="/profile">Profile Page</a>
+            <a class="nav-link" href="/profile">Profile</a>
           {{/if}}
         </li>
         <li class="nav-item">
