--- a/views/outfits/outfit-details.hbs
+++ b/views/outfits/outfit-details.hbs
@@ -1,20 +1,24 @@
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/items.css" />
+</head>
+
 <h2>Create an Outfit</h2>
 
-<div>
+<div class="item-feed">
     {{#if theUser}}
-    {{#each items}}
-        <img width="250px" src="{{image}}">
-        <h3>Name: {{this.itemName}}</h3>
-        <h3>Category: {{this.category}}</h3>
-        <form action="/{{id}}/updated/{{outfit.id}}" method="post">
-            <button>Add Item to Outfit</button>
-        </form>
-        <form action="{{id}}" method="post">
-            <button>Delete</button>
-        </form>
-        <br>
+        {{#each allItems}}
+            <img width="200px" height="220px" src="{{image}}">
+            <form action="/outfits/{{_id}}/updated/{{../outfit._id}}" method="post">
+                <button>Add Item to Outfit</button>
+            </form>
+            <br>
+            <form action="{{_id}}" method="post">
+                <button class="delete-btn">Delete</button>
+            </form>
+            <br>
 
-    {{/each}}
+        {{/each}}
     {{/if}}
 
 
