--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,22 +8,26 @@ body {
 }
 
 header {
-  background-image: url("../images/Header\ .png");
-  height: 50vw;
-  display: flex;;
+  background-image: url("../images/Header\ .png"); 
+  height: 40vw;
+  display: flex;
+  margin-top: -65px;
   align-items: center;
+  text-align: center;
   flex-direction: column;
   padding-top: 13rem;
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size: cover;
   background-position: center;
-}
+} 
 
 
 header h1 {
+  margin-top: 35px;
   color: white;
   font-size: 55px;
   text-align: center;
+  align-items: center;
 }
 
 h3 {
