--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
         </li>
         <li class="nav-item">
             {{#if theUser}}
-              <a class="nav-link"href='/outfits/outfits'>See Outfits</a> 
+              <a class="nav-link"href='/outfits/outfits'>Your Outfits</a> 
             {{/if}}
         </li>
         <li class="nav-item">
