--- a/views/outfits/outfits.hbs
+++ b/views/outfits/outfits.hbs
@@ -4,25 +4,42 @@
 </head>
 
 <h2>Your Outfits</h2>
+
+{{!-- button not working yet --}}
+{{#if recent}}
+<a href="/outfits/outfits/notRecent/{{this.id}}">
+    <button type="button">Sort By Longest Tenured</button>
+</a>
+{{else}}
+<a href="/outfits/outfits/recent/{{this.id}}">
+    <button type="button">Sort By Most Recent</button>
+</a>
+{{/if}}
+
+
+
 {{#each allOutfits}}
-<div class="container text-center">
-    <div class="row">
-{{#each items}}
-<div class="col">
-<form action="/outfits/{{this.id}}/delete" method="post">
-    <button type="button" class="btn-close">
-        <span class="icon-cross"></span>
-        <span class="visually-hidden">Close</span>
-    </button>
-</form>
+    <div class="container text-center">
+        <div class="row">
+    {{#each items}}
+    <div class="col">
+    <form action="/outfits/{{this.id}}/removeItem/{{../this.id}}" method="post">
+        <button type="submit" class="btn-close">
+             <span class="icon-cross"></span>
+             <span class="visually-hidden">Close</span>
+        </button>
+    </form>
     <img width="200px" height="220px" src="{{image}}">
     <h3>Item Name: {{itemName}}</h3>
-</div>
+    </div>
 {{/each}}
 </div>
 </div>
 <form action="/outfits/{{this.id}}/delete" method="post">
     <center><button class="delete-btn" type="submit">Delete</button></center>
+</form>
+<form action="/like/{{id}}" method="post">
+    <button>👍🏼</button>
 </form>
 <hr>
 {{/each}}
