worked on styling, starting the filter route, made a new outfits css

--- a/public/stylesheets/items.css
+++ b/public/stylesheets/items.css
@@ -42,6 +42,12 @@ h3 {
     line-height: 1;
 }
 
+
+.edit{
+    color: white;
+    text-decoration: none;
+}
+
 button {
     background-color: #FF19CF;
     border-radius: 100px;
