--- a/views/items/items.hbs
+++ b/views/items/items.hbs
@@ -16,14 +16,35 @@
 </div> --}}
 
 <h2><center>Your Closet</center></h2>
+<br>
+<form class="filter-item" action="/items/filter" method="post" enctype="multipart/form-data">
+<label>Filter by Item Type:</label>
+<select name="type">
+<option value="T-Shirt">T-Shirt</option>
+<option value="Dress">Dress</option>
+<option value="Pant">Pant</option>
+<option value="Jean">Jean</option>
+<option value="Short">Short</option>
+<option value="Skirt">Skirt</option>
+<option value="Jacket">Jacket</option>
+<option value="Romper">Romper</option>
+<option value="Coat">Coat</option>
+<option value="Sweater">Sweater</option>
+<option value="Footwear">Footwear</option>
+<option value="Jewelry">Jewelry</option>
+<option value="Accessories">Accessories</option>
+
+</select>
+</form>
+<br>
 
 {{#if recent}}
 <a href="/items/items/notRecent">
-    <button type="button">Sort By Longest Tenured</button>
+    <button type="button">Sort By Oldest</button>
 </a>
 {{else}}
 <a href="/items/items/recent">
-    <button type="button">Sort By Most Recent</button>
+    <button type="button">Sort By Newest</button>
 </a>
 {{/if}}
 
@@ -46,7 +67,6 @@
                 <a class="edit" href="/items/{{id}}/edit">Edit</a>
             </button>
 
-          
             <br>
             <br>
             
