--- a/views/outfits/outfits.hbs
+++ b/views/outfits/outfits.hbs
@@ -1,6 +1,6 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/items.css" />
+    <link rel="stylesheet" href="/stylesheets/outfits.css" />
 </head>
 
 <h2>Your Outfits</h2>
@@ -20,27 +20,30 @@
 
 {{#each allOutfits}}
     <div class="container text-center">
-        <div class="row">
+        <div class="row g-2">
+            
     {{#each items}}
-    <div class="col">
+    <div class="col-sm">
+        <div class="p-3">
     <form action="/outfits/{{this.id}}/removeItem/{{../this.id}}" method="post">
         <button type="submit" class="btn-close">
              <span class="icon-cross"></span>
              <span class="visually-hidden">Close</span>
         </button>
     </form>
-    <img width="200px" height="220px" src="{{image}}">
-    <h3>Item Name: {{itemName}}</h3>
+    <img width="150px" height="220px" src="{{image}}">
+    </div>
     </div>
 {{/each}}
 </div>
 </div>
 <form action="/outfits/{{this.id}}/delete" method="post">
-    <center><button class="delete-btn" type="submit">Delete</button></center>
+    <button class="delete-btn" type="submit">Delete</button></
 </form>
 <form action="/like/{{id}}" method="post">
     <button>👍🏼</button>
 </form>
+<br>
 <hr>
 {{/each}}
 
