--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,10 @@ body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+nav {
+  margin-bottom: 2rem;
+}
+
 .header {
   width: 100%;
   height: 80vh;
@@ -95,4 +99,11 @@ button:hover {
 .navbar-custom {
   background-color: #330052;
 }
+
+.nav-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
