--- a/views/items/items.hbs
+++ b/views/items/items.hbs
@@ -19,22 +19,25 @@
 <br>
 <form class="filter-item" action="/items/filter" method="post" enctype="multipart/form-data">
 <label>Filter by Item Type:</label>
-<select name="type">
-<option value="T-Shirt">T-Shirt</option>
-<option value="Dress">Dress</option>
-<option value="Pant">Pant</option>
-<option value="Jean">Jean</option>
-<option value="Short">Short</option>
-<option value="Skirt">Skirt</option>
-<option value="Jacket">Jacket</option>
-<option value="Romper">Romper</option>
-<option value="Coat">Coat</option>
-<option value="Sweater">Sweater</option>
-<option value="Footwear">Footwear</option>
-<option value="Jewelry">Jewelry</option>
-<option value="Accessories">Accessories</option>
-
-</select>
+    <select name="type">   
+        <option value="T-Shirt">T-Shirt</option>
+        <option value="Dress">Dress</option>
+        <option value="Pant">Pant</option>
+        <option value="Jean">Jean</option>
+        <option value="Short">Short</option>
+        <option value="Skirt">Skirt</option>
+        <option value="Jacket">Jacket</option>
+        <option value="Romper">Romper</option>
+        <option value="Coat">Coat</option>
+        <option value="Sweater">Sweater</option>
+        <option value="Footwear">Footwear</option>
+        <option value="Jewelry">Jewelry</option>
+        <option value="Accessories">Accessories</option>
+    </select>
+    
+    <form action="/items/filter" method="post">
+                <button class="delete-btn" type="submit">filter</button>
+    </form>
 </form>
 <br>
 
