--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,29 +1,15 @@
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/home.css" />
-</head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/stylesheets/home.css" />
 
-<section class="header">
-<div class="header-inner">
-<h1>Hello Closet!</h1>
-<h1>Welcome to Your Bitch'n Closet</h1>
-<div class= "buttons-section">
-<button> Learn More </button> <button><a class="nav-link" href="/signup">Sign Up</a></button>
+<div class="container">
+    <div class="header">
+        <div class="header-inner">
+            <h1>Hello Closet!</h1>
+            <h1>Welcome to Your Bitch'n Closet</h1>
+            <div class= "buttons-section">
+                <button> Learn More </button> 
+                <button><a class="nav-link" href="/signup">Sign Up</a></button>
+            </div>
+        </div>
+    </div>
 </div>
-</div>
-</section>
-
-</header>
-
-<hr>
-
-
-</section>
-
-<section class="outfits">
-
-</section>
-
-<footer class="footer">
-
-</footer>
