--- a/views/items/edit-item.hbs
+++ b/views/items/edit-item.hbs
@@ -12,6 +12,24 @@
     Item Name:
     <input type="text" name="itemName" value="{{itemName}}">
 </label>
+<label>
+    Type of Item:
+    <select name="type">  
+        <option value="T-Shirt">T-Shirt</option>
+        <option value="Dress">Dress</option>
+        <option value="Pant">Pant</option>
+        <option value="Jean">Jean</option>
+        <option value="Short">Short</option>
+        <option value="Skirt">Skirt</option>
+        <option value="Jacket">Jacket</option>
+        <option value="Romper">Romper</option>
+        <option value="Coat">Coat</option>
+        <option value="Sweater">Sweater</option>
+        <option value="Footwear">Footwear</option>
+        <option value="Jewelry">Jewelry</option>
+        <option value="Accessories">Accessories</option>
+    </select>
+</label>
 <br>
 <label>
     Size:
