--- a/views/items/items.hbs
+++ b/views/items/items.hbs
@@ -34,7 +34,7 @@
         <option value="Jewelry">Jewelry</option>
         <option value="Accessories">Accessories</option>
     </select>
-    <button class="filter-btn" type="submit">filter</button>
+    <button class="filter-btn" type="submit">Filter</button>
 </form>
 <br>
 
