--- a/public/stylesheets/items.css
+++ b/public/stylesheets/items.css
@@ -31,15 +31,15 @@ h3 {
     width: 200px;
     height: 220px;
     margin-bottom: 10px;
-    align-content: center;
 }
 
 .col {
     box-shadow: 2px 2px 5px #8c8193;
     border-radius: 25px;
     margin: 20px 20px;
-    text-align: left;
     line-height: 1;
+    align-items: center;
+
 }
 
 
@@ -70,6 +70,8 @@ button {
 button:hover {
     box-shadow: rgba(47, 1, 68, 0.787) 0 -25px 18px -14px inset, rgba(79, 6, 73, 0.25) 0 1px 2px, rgba(65, 3, 74, 0.692) 0 2px 4px, rgba(64, 1, 115, 0.57) 0 4px 8px, rgba(32, 5, 44, 0.25) 0 8px 16px, rgba(27, 3, 31, 0.656) 0 16px 32px;
     transform: scale(1.05) rotate(-1deg);
+    color: white;
+    text-decoration: none;
 }
 
 .delete-btn {
@@ -94,6 +96,8 @@ button:hover {
 .delete-btn:hover {
     box-shadow: rgba(47, 1, 68, 0.787) 0 -25px 18px -14px inset, rgba(79, 6, 73, 0.25) 0 1px 2px, rgba(65, 3, 74, 0.692) 0 2px 4px, rgba(64, 1, 115, 0.57) 0 4px 8px, rgba(32, 5, 44, 0.25) 0 8px 16px, rgba(27, 3, 31, 0.656) 0 16px 32px;
     transform: scale(1.05) rotate(-1deg);
+    color: white;
+    text-decoration: none;
 }
 
 .row {
