--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,22 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/stylesheets/home.css" />
 
-<div class="container">
-    <div class="header">
-        <div class="header-inner">
-            <h1>Hello Closet!</h1>
-            <h1>Welcome to Your Bitch'n Closet</h1>
-            <div class= "buttons-section">
-                <button> Learn More </button> 
-                <button><a class="nav-link" href="/signup">Sign Up</a></button>
+
+<header>
+    
+    <div id="intro" class="bg-image">
+        <div class="mask">
+            <div class="container d-flex align-items-center justify-content-center text-center h-100">
+                <div class="text-white">
+                    <h1 class="mb-3">Hello Closet!</h1>
+                    <h1 class="mb-4">Welcome to Your Bitch'n Closet</h5>
+                    <div class= "buttons-section">
+                        <button> Learn More </button> 
+                        <button><a class="nav-link" href="/signup">Sign Up</a></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+</header>
