--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -5,20 +5,13 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.header {
+
+#intro {
     background-image: url("../images/Header\ .png");
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: white;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    height: 100vh;
 }
+
+
 
 header h1 {
     margin-top: 35px;
@@ -97,4 +90,8 @@ button:hover {
 
 .display {
     width: 20vw;
+}
+
+.text-white{
+    margin-top: 300px;
 }
